2007-04-19  Mark Rowe  <mrowe@apple.com>

        Reviewed by Oliver and Adam.

        <rdar://problem/5141290> WebAssertions.h is still needed by some internal clients.

        * Misc/WebAssertions.h: Added.
        * WebKit.xcodeproj/project.pbxproj:

2007-04-17  Brady Eidson  <beidson@apple.com>

        Reviewed by Tim

        <rdar://problem/5008925>
        Expose the NSURLConnection delegate willCacheResponse API to WebResourceLoadDelegate

        * WebCoreSupport/WebFrameLoaderClient.h:
        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::willCacheResponse): Call 
          [WebResourceLoadDelegate webView:resource:willCacheResponse:fromDataSource:];

        * WebView/WebView.mm:
        (-[WebView _cacheResourceLoadDelegateImplementations]): Pull out the willCacheResponse impl

        * WebView/WebViewPrivate.h: Add WebResourceLoadDelegatePrivate category for this new SPI

2007-04-18  John Sullivan  <sullivan@apple.com>

        Reviewed by Adam

        - fixed <rdar://problem/5103009> REGRESSION: Activity window shows blank name for untitled pages

        * WebView/WebHTMLRepresentation.mm:
        (-[WebHTMLRepresentation title]):
        return nil for empty string, to match old behavior

2007-04-17  John Sullivan  <sullivan@apple.com>

        Reviewed by Tim Hatcher

        - fixed <rdar://problem/5138492> Safari doesn't remember some changes to the PDF scale and display mode 

        Some of the user interactions that could change the PDF scale and display mode were not going through
        the proxy mechanism in WebPDFView that updates preferences. Now we also listen to PDFKit notifications
        in order to catch the other cases.

        * WebView/WebPDFView.h:
        new _ignoreScaleAndDisplayModeNotifications and _updatePreferencesTimer ivars

        * WebView/WebPDFView.mm:
        (-[WebPDFView setPDFDocument:]):